Remove invalid property defaults

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,10 +11,10 @@ logging:
         client:
           RestTemplate: DEBUG
 
-groundspeak:
-  consumer_key: ...
-  username: ...
-  password: ...
+#groundspeak:
+#  consumer_key: ...
+#  username: ...
+#  password: ...
 
 gpsbabel:
   args: gpsbabel -i gpx -f input.gpx -o garmin_gpi,bitmap=image.bmp,sleep=1 -F output.gpi
